# etas-ford-ai-workflow

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
agents/config_agent/: Dockerfile  __init__.py  graph.py  main.py  requirements.txt
agents/requirements_agent/: Dockerfile  README.md  __init__.py  graph.py  main.py  requirements.txt
agents/requirements_agent/tests/: __init__.py  sample_doors_export.csv
agents/shared/: llm_client.py  safety_guardrails.py
docs/: ARCHITECTURE.md  generate_architecture_pdf.py
docs/adr/: ADR-001-agent-isolation.md
docs/scripts/: generate_best_practices_pdf.py
infra/: .env.example  docker-compose.yml
scripts/: arxml_diff.py
scripts/tests/: baseline.arxml  modified.arxml
workflows/jenkins/: Jenkinsfile
workflows/n8n/: autosar_review_workflow.json  email_catchup_workflow.json
